plex/plex/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: plex
  labels:
    app: plex
spec:
  selector:
    matchLabels:
      name: plex
  template:
    metadata:
      labels:
        name: plex
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        runAsNonRoot: true
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: plex-pvc
      containers:
        - name: plex
          image: ghcr.io/k8s-at-home/plex
          volumeMounts:
            - mountPath: /config
              name: data
              subPath: plex/config
            - mountPath: /data
              name: data
              subPath: plex/data
            - mountPath: /transcode
              name: data
              subPath: plex/transcode
